deploy/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cotutelle
  labels:
    app.kubernetes.io/part-of: cotutelle
